compilation/td03_analsynt/exo35-yacc.output
Grammaire

    0 $accept: start $end

    1 start: E

    2 E: E '\n'
    3  | E '+' T
    4  | E '-' T
    5  | T

    6 T: T '*' F
    7  | T '/' F
    8  | F

    9 F: NUMBER
   10  | '(' E ')'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 2
'(' (40) 10
')' (41) 10
'*' (42) 6
'+' (43) 3
'-' (45) 4
'/' (47) 7
error (256)
NUMBER (258) 9


Non-terminaux, suivis des règles où ils apparaissent

$accept (11)
    à gauche: 0
start (12)
    à gauche: 1, à droite: 0
E (13)
    à gauche: 2 3 4 5, à droite: 1 2 3 4 10
T (14)
    à gauche: 6 7 8, à droite: 3 4 5 6 7
F (15)
    à gauche: 9 10, à droite: 6 7 8


État 0

    0 $accept: . start $end
    1 start: . E
    2 E: . E '\n'
    3  | . E '+' T
    4  | . E '-' T
    5  | . T
    6 T: . T '*' F
    7  | . T '/' F
    8  | . F
    9 F: . NUMBER
   10  | . '(' E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    start  aller à l'état 3
    E      aller à l'état 4
    T      aller à l'état 5
    F      aller à l'état 6


État 1

    9 F: NUMBER .

    $défaut  réduction par utilisation de la règle 9 (F)


État 2

    2 E: . E '\n'
    3  | . E '+' T
    4  | . E '-' T
    5  | . T
    6 T: . T '*' F
    7  | . T '/' F
    8  | . F
    9 F: . NUMBER
   10  | . '(' E ')'
   10  | '(' . E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    E  aller à l'état 7
    T  aller à l'état 5
    F  aller à l'état 6


État 3

    0 $accept: start . $end

    $end  décalage et aller à l'état 8


État 4

    1 start: E .  [$end]
    2 E: E . '\n'
    3  | E . '+' T
    4  | E . '-' T

    '\n'  décalage et aller à l'état 9
    '+'   décalage et aller à l'état 10
    '-'   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 1 (start)


État 5

    5 E: T .  [$end, '\n', '+', '-', ')']
    6 T: T . '*' F
    7  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (E)


État 6

    8 T: F .

    $défaut  réduction par utilisation de la règle 8 (T)


État 7

    2 E: E . '\n'
    3  | E . '+' T
    4  | E . '-' T
   10 F: '(' E . ')'

    '\n'  décalage et aller à l'état 9
    '+'   décalage et aller à l'état 10
    '-'   décalage et aller à l'état 11
    ')'   décalage et aller à l'état 14


État 8

    0 $accept: start $end .

    $défaut  accepter


État 9

    2 E: E '\n' .

    $défaut  réduction par utilisation de la règle 2 (E)


État 10

    3 E: E '+' . T
    6 T: . T '*' F
    7  | . T '/' F
    8  | . F
    9 F: . NUMBER
   10  | . '(' E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    T  aller à l'état 15
    F  aller à l'état 6


État 11

    4 E: E '-' . T
    6 T: . T '*' F
    7  | . T '/' F
    8  | . F
    9 F: . NUMBER
   10  | . '(' E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    T  aller à l'état 16
    F  aller à l'état 6


État 12

    6 T: T '*' . F
    9 F: . NUMBER
   10  | . '(' E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    F  aller à l'état 17


État 13

    7 T: T '/' . F
    9 F: . NUMBER
   10  | . '(' E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 2

    F  aller à l'état 18


État 14

   10 F: '(' E ')' .

    $défaut  réduction par utilisation de la règle 10 (F)


État 15

    3 E: E '+' T .  [$end, '\n', '+', '-', ')']
    6 T: T . '*' F
    7  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 3 (E)


État 16

    4 E: E '-' T .  [$end, '\n', '+', '-', ')']
    6 T: T . '*' F
    7  | T . '/' F

    '*'  décalage et aller à l'état 12
    '/'  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (E)


État 17

    6 T: T '*' F .

    $défaut  réduction par utilisation de la règle 6 (T)


État 18

    7 T: T '/' F .

    $défaut  réduction par utilisation de la règle 7 (T)
